fixed copyright message getting cut off

--- a/css/application.css
+++ b/css/application.css
@@ -30,6 +30,8 @@ ul{
 h1.big-text {
   font-size: 4em;
   text-shadow: 2px 2px black;
+  color:#008CBA;
+  line-height: 1;
 }
 
 .section-title {
